--- a/assets/css/bootstrap-responsive.css
+++ b/assets/css/bootstrap-responsive.css
@@ -448,7 +448,7 @@
     clear: both;
   }
   [class*="span"] {
-    float: left;
+    /*float: left;**/
     /*margin-left: 30px;*/
   }
   .container,
@@ -463,7 +463,7 @@
     width: 1070px;
   }
   .span10 {
-    width: 97%;
+    /*width: 97%;*/
     background: white;
     padding-left: 20px;
     padding-top: 20px;
