--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2733,6 +2733,20 @@ button.close {
   padding: 5px !important;
 }
 
+.boton_dashboard{
+  background: #eee !important;
+  color: #555 !important;
+  padding: 3px !important;
+  margin-right: 10px;
+}
+
+.boton_dashboard:hover{
+  background: #ddd !important;
+  color: black !important;
+  padding: 3px !important;
+  margin-right: 10px;
+}
+
 .btn-primary {
   background-color: #0074cc;
   *background-color: #0055cc;
