Se agrego validaciones extras en asignación de horas institucionales a docentes. Se agrego opción de ver los meses en la sección de periodos escuelas. Nuevo backup de la bd generado.

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -198,7 +198,43 @@ a:hover {
 .navbar-static-top .container,
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
-  width: 950px;
+  width: 1670px;
+}
+.span28 {
+  width: 1670px;
+}
+.span27 {
+  width: 1610px;
+}
+.span26 {
+  width: 1550px;
+}
+.span25 {
+  width: 1490px;
+}
+.span24 {
+  width: 1430px;
+}
+.span23 {
+  width: 1370px;
+}
+.span22 {
+  width: 1310px;
+}
+.span21 {
+  width: 1250px;
+}
+.span20 {
+  width: 1190px;
+}
+.span19 {
+  width: 1130px;
+}
+.span18 {
+  width: 1070px;
+}
+.span17 {
+  width: 1010px;
 }
 .span16 {
   width: 950px;
@@ -247,6 +283,42 @@ a:hover {
 }
 .span1 {
   width: 50px;
+}
+.offset28 {
+  margin-left: 1690px;
+}
+.offset27 {
+  margin-left: 1630px;
+}
+.offset26 {
+  margin-left: 1570px;
+}
+.offset25 {
+  margin-left: 1510px;
+}
+.offset24 {
+  margin-left: 1450px;
+}
+.offset23 {
+  margin-left: 1390px;
+}
+.offset22 {
+  margin-left: 1330px;
+}
+.offset21 {
+  margin-left: 1270px;
+}
+.offset20 {
+  margin-left: 1210px;
+}
+.offset19 {
+  margin-left: 1150px;
+}
+.offset18 {
+  margin-left: 1090px;
+}
+.offset17 {
+  margin-left: 1030px;
 }
 .offset16 {
   margin-left: 970px;
@@ -317,203 +389,347 @@ a:hover {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   float: left;
-  margin-left: 1.0526315789473684%;
-  *margin-left: 1%;
+  margin-left: 0.5988023952095809%;
+  *margin-left: 0.5688622754491018%;
 }
 .row-fluid [class*="span"]:first-child {
   margin-left: 0;
 }
+.row-fluid .span28 {
+  width: 100%;
+  *width: 99.97005988023952%;
+}
+.row-fluid .span27 {
+  width: 96.40718562874252%;
+  *width: 96.37724550898204%;
+}
+.row-fluid .span26 {
+  width: 92.81437125748502%;
+  *width: 92.78443113772454%;
+}
+.row-fluid .span25 {
+  width: 89.22155688622755%;
+  *width: 89.19161676646706%;
+}
+.row-fluid .span24 {
+  width: 85.62874251497006%;
+  *width: 85.59880239520957%;
+}
+.row-fluid .span23 {
+  width: 82.03592814371258%;
+  *width: 82.0059880239521%;
+}
+.row-fluid .span22 {
+  width: 78.44311377245509%;
+  *width: 78.41317365269461%;
+}
+.row-fluid .span21 {
+  width: 74.8502994011976%;
+  *width: 74.82035928143712%;
+}
+.row-fluid .span20 {
+  width: 71.25748502994013%;
+  *width: 71.22754491017965%;
+}
+.row-fluid .span19 {
+  width: 67.66467065868264%;
+  *width: 67.63473053892216%;
+}
+.row-fluid .span18 {
+  width: 64.07185628742515%;
+  *width: 64.04191616766467%;
+}
+.row-fluid .span17 {
+  width: 60.47904191616766%;
+  *width: 60.44910179640718%;
+}
 .row-fluid .span16 {
-  width: 99.99999999999999%;
-  *width: 99.94736842105262%;
+  width: 56.886227544910184%;
+  *width: 56.8562874251497%;
 }
 .row-fluid .span15 {
-  width: 93.68421052631578%;
-  *width: 93.63157894736841%;
+  width: 53.2934131736527%;
+  *width: 53.26347305389222%;
 }
 .row-fluid .span14 {
-  width: 87.36842105263158%;
-  *width: 87.3157894736842%;
+  width: 49.70059880239521%;
+  *width: 49.67065868263473%;
 }
 .row-fluid .span13 {
-  width: 81.05263157894737%;
-  *width: 81%;
+  width: 46.10778443113772%;
+  *width: 46.07784431137724%;
 }
 .row-fluid .span12 {
-  width: 74.73684210526315%;
-  *width: 74.68421052631578%;
+  width: 42.51497005988024%;
+  *width: 42.48502994011976%;
 }
 .row-fluid .span11 {
-  width: 68.42105263157895%;
-  *width: 68.36842105263158%;
+  width: 38.92215568862276%;
+  *width: 38.89221556886228%;
 }
 .row-fluid .span10 {
-  width: 62.10526315789473%;
-  *width: 62.05263157894736%;
+  width: 35.32934131736527%;
+  *width: 35.29940119760479%;
 }
 .row-fluid .span9 {
-  width: 55.78947368421052%;
-  *width: 55.73684210526315%;
+  width: 31.736526946107787%;
+  *width: 31.70658682634731%;
 }
 .row-fluid .span8 {
-  width: 49.473684210526315%;
-  *width: 49.421052631578945%;
+  width: 28.1437125748503%;
+  *width: 28.113772455089823%;
 }
 .row-fluid .span7 {
-  width: 43.1578947368421%;
-  *width: 43.10526315789473%;
+  width: 24.550898203592816%;
+  *width: 24.520958083832337%;
 }
 .row-fluid .span6 {
-  width: 36.84210526315789%;
-  *width: 36.78947368421052%;
+  width: 20.95808383233533%;
+  *width: 20.92814371257485%;
 }
 .row-fluid .span5 {
-  width: 30.52631578947368%;
-  *width: 30.47368421052631%;
+  width: 17.365269461077844%;
+  *width: 17.335329341317365%;
 }
 .row-fluid .span4 {
-  width: 24.210526315789473%;
-  *width: 24.157894736842103%;
+  width: 13.77245508982036%;
+  *width: 13.742514970059881%;
 }
 .row-fluid .span3 {
-  width: 17.89473684210526%;
-  *width: 17.84210526315789%;
+  width: 10.179640718562874%;
+  *width: 10.149700598802395%;
 }
 .row-fluid .span2 {
-  width: 11.578947368421051%;
-  *width: 11.526315789473683%;
+  width: 6.586826347305389%;
+  *width: 6.5568862275449105%;
 }
 .row-fluid .span1 {
-  width: 5.263157894736842%;
-  *width: 5.2105263157894735%;
+  width: 2.9940119760479043%;
+  *width: 2.964071856287425%;
+}
+.row-fluid .offset28 {
+  margin-left: 101.19760479041916%;
+  *margin-left: 101.1377245508982%;
+}
+.row-fluid .offset28:first-child {
+  margin-left: 100.59880239520957%;
+  *margin-left: 100.53892215568861%;
+}
+.row-fluid .offset27 {
+  margin-left: 97.60479041916169%;
+  *margin-left: 97.54491017964072%;
+}
+.row-fluid .offset27:first-child {
+  margin-left: 97.0059880239521%;
+  *margin-left: 96.94610778443113%;
+}
+.row-fluid .offset26 {
+  margin-left: 94.01197604790418%;
+  *margin-left: 93.95209580838322%;
+}
+.row-fluid .offset26:first-child {
+  margin-left: 93.4131736526946%;
+  *margin-left: 93.35329341317363%;
+}
+.row-fluid .offset25 {
+  margin-left: 90.41916167664671%;
+  *margin-left: 90.35928143712574%;
+}
+.row-fluid .offset25:first-child {
+  margin-left: 89.82035928143712%;
+  *margin-left: 89.76047904191616%;
+}
+.row-fluid .offset24 {
+  margin-left: 86.82634730538922%;
+  *margin-left: 86.76646706586826%;
+}
+.row-fluid .offset24:first-child {
+  margin-left: 86.22754491017963%;
+  *margin-left: 86.16766467065867%;
+}
+.row-fluid .offset23 {
+  margin-left: 83.23353293413174%;
+  *margin-left: 83.17365269461078%;
+}
+.row-fluid .offset23:first-child {
+  margin-left: 82.63473053892216%;
+  *margin-left: 82.57485029940119%;
+}
+.row-fluid .offset22 {
+  margin-left: 79.64071856287426%;
+  *margin-left: 79.58083832335329%;
+}
+.row-fluid .offset22:first-child {
+  margin-left: 79.04191616766467%;
+  *margin-left: 78.9820359281437%;
+}
+.row-fluid .offset21 {
+  margin-left: 76.04790419161677%;
+  *margin-left: 75.9880239520958%;
+}
+.row-fluid .offset21:first-child {
+  margin-left: 75.44910179640718%;
+  *margin-left: 75.38922155688621%;
+}
+.row-fluid .offset20 {
+  margin-left: 72.45508982035929%;
+  *margin-left: 72.39520958083833%;
+}
+.row-fluid .offset20:first-child {
+  margin-left: 71.8562874251497%;
+  *margin-left: 71.79640718562874%;
+}
+.row-fluid .offset19 {
+  margin-left: 68.8622754491018%;
+  *margin-left: 68.80239520958084%;
+}
+.row-fluid .offset19:first-child {
+  margin-left: 68.26347305389221%;
+  *margin-left: 68.20359281437125%;
+}
+.row-fluid .offset18 {
+  margin-left: 65.26946107784431%;
+  *margin-left: 65.20958083832335%;
+}
+.row-fluid .offset18:first-child {
+  margin-left: 64.67065868263472%;
+  *margin-left: 64.61077844311376%;
+}
+.row-fluid .offset17 {
+  margin-left: 61.67664670658682%;
+  *margin-left: 61.61676646706586%;
+}
+.row-fluid .offset17:first-child {
+  margin-left: 61.07784431137724%;
+  *margin-left: 61.01796407185628%;
 }
 .row-fluid .offset16 {
-  margin-left: 102.10526315789473%;
-  *margin-left: 101.99999999999999%;
+  margin-left: 58.08383233532935%;
+  *margin-left: 58.02395209580838%;
 }
 .row-fluid .offset16:first-child {
-  margin-left: 101.05263157894736%;
-  *margin-left: 100.94736842105262%;
+  margin-left: 57.485029940119766%;
+  *margin-left: 57.4251497005988%;
 }
 .row-fluid .offset15 {
-  margin-left: 95.78947368421052%;
-  *margin-left: 95.68421052631578%;
+  margin-left: 54.491017964071865%;
+  *margin-left: 54.4311377245509%;
 }
 .row-fluid .offset15:first-child {
-  margin-left: 94.73684210526315%;
-  *margin-left: 94.63157894736841%;
+  margin-left: 53.892215568862284%;
+  *margin-left: 53.83233532934132%;
 }
 .row-fluid .offset14 {
-  margin-left: 89.47368421052632%;
-  *margin-left: 89.36842105263158%;
+  margin-left: 50.898203592814376%;
+  *margin-left: 50.83832335329341%;
 }
 .row-fluid .offset14:first-child {
-  margin-left: 88.42105263157895%;
-  *margin-left: 88.3157894736842%;
+  margin-left: 50.299401197604794%;
+  *margin-left: 50.23952095808383%;
 }
 .row-fluid .offset13 {
-  margin-left: 83.15789473684211%;
-  *margin-left: 83.05263157894737%;
+  margin-left: 47.30538922155689%;
+  *margin-left: 47.24550898203592%;
 }
 .row-fluid .offset13:first-child {
-  margin-left: 82.10526315789474%;
-  *margin-left: 82%;
+  margin-left: 46.706586826347305%;
+  *margin-left: 46.64670658682634%;
 }
 .row-fluid .offset12 {
-  margin-left: 76.84210526315789%;
-  *margin-left: 76.73684210526315%;
+  margin-left: 43.712574850299404%;
+  *margin-left: 43.65269461077844%;
 }
 .row-fluid .offset12:first-child {
-  margin-left: 75.78947368421052%;
-  *margin-left: 75.68421052631578%;
+  margin-left: 43.11377245508982%;
+  *margin-left: 43.05389221556886%;
 }
 .row-fluid .offset11 {
-  margin-left: 70.52631578947368%;
-  *margin-left: 70.42105263157895%;
+  margin-left: 40.11976047904192%;
+  *margin-left: 40.05988023952096%;
 }
 .row-fluid .offset11:first-child {
-  margin-left: 69.47368421052632%;
-  *margin-left: 69.36842105263158%;
+  margin-left: 39.52095808383234%;
+  *margin-left: 39.461077844311376%;
 }
 .row-fluid .offset10 {
-  margin-left: 64.21052631578947%;
-  *margin-left: 64.10526315789473%;
+  margin-left: 36.52694610778443%;
+  *margin-left: 36.46706586826347%;
 }
 .row-fluid .offset10:first-child {
-  margin-left: 63.1578947368421%;
-  *margin-left: 63.05263157894736%;
+  margin-left: 35.92814371257485%;
+  *margin-left: 35.86826347305389%;
 }
 .row-fluid .offset9 {
-  margin-left: 57.89473684210526%;
-  *margin-left: 57.78947368421052%;
+  margin-left: 32.93413173652695%;
+  *margin-left: 32.874251497005986%;
 }
 .row-fluid .offset9:first-child {
-  margin-left: 56.84210526315789%;
-  *margin-left: 56.73684210526315%;
+  margin-left: 32.33532934131737%;
+  *margin-left: 32.275449101796404%;
 }
 .row-fluid .offset8 {
-  margin-left: 51.578947368421055%;
-  *margin-left: 51.473684210526315%;
+  margin-left: 29.341317365269465%;
+  *margin-left: 29.281437125748507%;
 }
 .row-fluid .offset8:first-child {
-  margin-left: 50.526315789473685%;
-  *margin-left: 50.421052631578945%;
+  margin-left: 28.742514970059883%;
+  *margin-left: 28.682634730538926%;
 }
 .row-fluid .offset7 {
-  margin-left: 45.26315789473684%;
-  *margin-left: 45.1578947368421%;
+  margin-left: 25.74850299401198%;
+  *margin-left: 25.68862275449102%;
 }
 .row-fluid .offset7:first-child {
-  margin-left: 44.21052631578947%;
-  *margin-left: 44.10526315789473%;
+  margin-left: 25.149700598802397%;
+  *margin-left: 25.08982035928144%;
 }
 .row-fluid .offset6 {
-  margin-left: 38.94736842105263%;
-  *margin-left: 38.84210526315789%;
+  margin-left: 22.155688622754493%;
+  *margin-left: 22.095808383233535%;
 }
 .row-fluid .offset6:first-child {
-  margin-left: 37.89473684210526%;
-  *margin-left: 37.78947368421052%;
+  margin-left: 21.55688622754491%;
+  *margin-left: 21.497005988023954%;
 }
 .row-fluid .offset5 {
-  margin-left: 32.63157894736842%;
-  *margin-left: 32.52631578947368%;
+  margin-left: 18.562874251497007%;
+  *margin-left: 18.50299401197605%;
 }
 .row-fluid .offset5:first-child {
-  margin-left: 31.57894736842105%;
-  *margin-left: 31.47368421052631%;
+  margin-left: 17.964071856287426%;
+  *margin-left: 17.904191616766468%;
 }
 .row-fluid .offset4 {
-  margin-left: 26.31578947368421%;
-  *margin-left: 26.21052631578947%;
+  margin-left: 14.970059880239521%;
+  *margin-left: 14.910179640718564%;
 }
 .row-fluid .offset4:first-child {
-  margin-left: 25.263157894736842%;
-  *margin-left: 25.157894736842103%;
+  margin-left: 14.371257485029941%;
+  *margin-left: 14.311377245508984%;
 }
 .row-fluid .offset3 {
-  margin-left: 19.999999999999996%;
-  *margin-left: 19.894736842105257%;
+  margin-left: 11.377245508982035%;
+  *margin-left: 11.317365269461078%;
 }
 .row-fluid .offset3:first-child {
-  margin-left: 18.94736842105263%;
-  *margin-left: 18.84210526315789%;
+  margin-left: 10.778443113772456%;
+  *margin-left: 10.718562874251498%;
 }
 .row-fluid .offset2 {
-  margin-left: 13.684210526315788%;
-  *margin-left: 13.578947368421051%;
+  margin-left: 7.784431137724551%;
+  *margin-left: 7.724550898203594%;
 }
 .row-fluid .offset2:first-child {
-  margin-left: 12.63157894736842%;
-  *margin-left: 12.526315789473683%;
+  margin-left: 7.18562874251497%;
+  *margin-left: 7.125748502994012%;
 }
 .row-fluid .offset1 {
-  margin-left: 7.368421052631579%;
-  *margin-left: 7.2631578947368425%;
+  margin-left: 4.191616766467066%;
+  *margin-left: 4.131736526946108%;
 }
 .row-fluid .offset1:first-child {
-  margin-left: 6.31578947368421%;
-  *margin-left: 6.2105263157894735%;
+  margin-left: 3.592814371257485%;
+  *margin-left: 3.532934131736527%;
 }
 [class*="span"].hide,
 .row-fluid [class*="span"].hide {
@@ -1096,6 +1312,42 @@ textarea,
 }
 .controls-row [class*="span"] + [class*="span"] {
   margin-left: 10px;
+}
+input.span28, textarea.span28, .uneditable-input.span28 {
+  width: 1656px;
+}
+input.span27, textarea.span27, .uneditable-input.span27 {
+  width: 1596px;
+}
+input.span26, textarea.span26, .uneditable-input.span26 {
+  width: 1536px;
+}
+input.span25, textarea.span25, .uneditable-input.span25 {
+  width: 1476px;
+}
+input.span24, textarea.span24, .uneditable-input.span24 {
+  width: 1416px;
+}
+input.span23, textarea.span23, .uneditable-input.span23 {
+  width: 1356px;
+}
+input.span22, textarea.span22, .uneditable-input.span22 {
+  width: 1296px;
+}
+input.span21, textarea.span21, .uneditable-input.span21 {
+  width: 1236px;
+}
+input.span20, textarea.span20, .uneditable-input.span20 {
+  width: 1176px;
+}
+input.span19, textarea.span19, .uneditable-input.span19 {
+  width: 1116px;
+}
+input.span18, textarea.span18, .uneditable-input.span18 {
+  width: 1056px;
+}
+input.span17, textarea.span17, .uneditable-input.span17 {
+  width: 996px;
 }
 input.span16, textarea.span16, .uneditable-input.span16 {
   width: 936px;
@@ -3725,7 +3977,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-static-top .container,
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
-  width: 950px;
+  width: 1670px;
 }
 .navbar-fixed-top {
   top: 0;
