Se ha agregado menejo de fondo comun. Se ha adaptado el modulo de consultas y alertas para trabajar con esta nueva funcionalidad de manejo de horas institucionales sobrantes. Se han cambiadoo radio button de habilitado o no habilitado por un select en los formularios apropiados. Nueva copia de backup de la bd generada.

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -90,3 +90,9 @@ label.error {
 .result-header{
   border-bottom: 1px solid #EEE;
 }
+#step2,#step3{
+  display: none;
+}
+#lblDescripLineaAccion{
+  font-size: 14px;
+}
